java/java-tests/testData/codeInsight/daemonCodeAnalyzer/genericsHighlighting/InheritFromTypeParameter.java
class C<T> extends <error descr="Class cannot inherit from its type parameter">T</error>
{}